WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
297811
Applying wavy underline text decoration with -webkit-text-security will hang if the font size is too small
https://bugs.webkit.org/show_bug.cgi?id=297811
Summary
Applying wavy underline text decoration with -webkit-text-security will hang ...
Said Abou-Hallawa
Reported
2025-08-22 16:32:59 PDT
Created
attachment 476494
[details]
test case Open the attached test case. Result: WebKit will hang and eventually will jetsam.
Attachments
test case
(584 bytes, text/html)
2025-08-22 16:32 PDT
,
Said Abou-Hallawa
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
Said Abou-Hallawa
Comment 1
2025-08-22 16:33:38 PDT
rdar://157024940
Said Abou-Hallawa
Comment 2
2025-08-22 16:45:41 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/49800
EWS
Comment 3
2025-08-28 17:51:23 PDT
Committed
299293@main
(f45f1ca9e7b6): <
https://commits.webkit.org/299293@main
> Reviewed commits have been landed. Closing PR #49800 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug