Applying wavy underline text decoration with -webkit-text-security will hang if the font size is too small https://bugs.webkit.org/show_bug.cgi?id=297811 rdar://157024940

Reviewed by Simon Fraser.

Ensure the wavy path will not have too many segments. Call drawLineForText() as
a fallback in this case. Move adjustLineToPixelBoundaries() from GraphicsContext
to TextDecorationPainter.cpp since strokeWavyTextDecoration() is the only caller.

* LayoutTests/fast/text/text-security-small-wavy-style-expected.txt: Added.
* LayoutTests/fast/text/text-security-small-wavy-style.html: Added.
* LayoutTests/platform/ios/fast/text/text-security-small-wavy-style-expected.txt: Added.
* Source/WebCore/platform/graphics/GraphicsContext.cpp:
(WebCore::GraphicsContext::adjustLineToPixelBoundaries): Deleted.
* Source/WebCore/platform/graphics/GraphicsContext.h:
* Source/WebCore/rendering/TextDecorationPainter.cpp:
(WebCore::textDecorationStyleToStrokeStyle):
(WebCore::adjustLineToPixelBoundaries):
(WebCore::strokeWavyTextDecoration):
(WebCore::TextDecorationPainter::paintBackgroundDecorations):
(WebCore::TextDecorationPainter::paintLineThrough):

Canonical link: https://commits.webkit.org/299293@main